@@ -4,7 +4,7 @@ use strict;
 use warnings;
 use 5.010;
 use utf8;
-use Test::More tests => 190;
+use Test::More tests => 182;
 #use Test::More 'no_plan';
 use Test::NoWarnings;
 use List::Util qw(first);
@@ -252,44 +252,41 @@ is $target->name, 'db:', 'Default target name should be "db:"';
 is $target->uri, URI->new('db:'), 'Default target URI should be "db:"';
 
 # Track what gets passed to Config->get().
-my (@get_expect, $orig_get);
+my (@get_keys, $orig_get);
 my $cmock = TestConfig->mock(get => sub {
-    my $self = shift;
-    my $exp = shift @get_expect;
-    is_deeply \@_, [key => $exp], "Should try to fetch $exp";
-    $orig_get->($self, @_);
+    my ($self, %p) = @_;
+    push @get_keys => $p{key};
+    $orig_get->($self, %p);
 });
 $orig_get = $cmock->original('get');
 
 # Make sure the core.engine config option gets used.
-@get_expect = ('core.engine', 'core.target', 'core.engine', 'engine.sqlite.target', 'core.sqlite.target');
 $config->update('core.engine' => 'sqlite');
 ok $cmd = $CLASS->new({ sqitch => $sqitch }), "Create an $CLASS object";
 isa_ok $target = $cmd->default_target, 'App::Sqitch::Target',
     'default target';
 is $target->name, 'db:sqlite:', 'Default target name should be "db:sqlite:"';
 is $target->uri, URI->new('db:sqlite:'), 'Default target URI should be "db:sqlite:"';
-
-# Make sure --engine is higher precedence.
-@get_expect = ('engine.pg.target', 'core.pg.target');
-$sqitch->options->{engine} = 'pg';
-ok $cmd = $CLASS->new({ sqitch => $sqitch }), "Create an $CLASS object";
-isa_ok $target = $cmd->default_target, 'App::Sqitch::Target',
-    'default target';
-is $target->name, 'db:pg:', 'Default target name should be "db:pg:"';
-is $target->uri, URI->new('db:pg:'), 'Default target URI should be "db:pg:"';
+is_deeply \@get_keys,
+    [qw(core.engine core.target core.engine engine.sqlite.target)],
+    'Should have fetched config stuff';
 
 # We should get stuff from the engine section of the config.
-@get_expect = ('engine.pg.target');
-$config->update('engine.pg.target' => 'db:pg:foo');
+$config->update(
+    'core.engine' => 'pg',
+    'engine.pg.target' => 'db:pg:foo',
+);
+@get_keys = ();
 ok $cmd = $CLASS->new({ sqitch => $sqitch }), "Create an $CLASS object";
 isa_ok $target = $cmd->default_target, 'App::Sqitch::Target',
     'default target';
 is $target->name, 'db:pg:foo', 'Default target name should be "db:pg:foo"';
 is $target->uri, URI->new('db:pg:foo'), 'Default target URI should be "db:pg:foo"';
+is_deeply \@get_keys,
+    [qw(core.engine core.target core.engine engine.pg.target)],
+    'Should have fetched config stuff again';
 
 # Cleanup.
-delete $sqitch->options->{engine};
 $cmock->unmock('get');
 
 ##############################################################################
