@@ -97,6 +97,9 @@ Revision history for Perl extension App::Sqitch
        to prevent conflicts with command options.
      - Changed the alias for the core `--verbose` option from `-v` to `-V` so
        that all core option single-letter aliases are uppercase.
+     - Removed the deprecated core `--engine` option. The `init` command still
+       supports it, while other commands are able to parse the engine name as
+       an argument, e.g., `sqitch deploy mysql`.
 
 0.9998 2018-10-03T20:53:58Z
      - Fixed an issue where Sqitch would sometimes truncate the registry
